--- a/components/CarouselMain/css/emblaMain.css
+++ b/components/CarouselMain/css/emblaMain.css
@@ -2,7 +2,8 @@
   position: relative;
   background-color: #f7f7f7;
   padding: 20px;
-  max-width: 670px;
+  /* max-width: 670px; */
+  max-width: 1900px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -39,7 +40,8 @@
 .embla__slide__inner {
   position: relative;
   overflow: hidden;
-  height: 190px;
+  /* height: 190px; */
+  height: 700px;
 }
 
 .embla__slide__img {
@@ -51,7 +53,8 @@
   min-height: 100%;
   min-width: 100%;
   max-width: none;
-  transform: translate(-50%, -50%);
+  /* transform: translate(-50%, -50%); */
+  object-fit: cover;
 }
 
 .embla__button {
