--- a/components/CarouselMain/css/emblaMain.css
+++ b/components/CarouselMain/css/emblaMain.css
@@ -1,4 +1,4 @@
-.embla {
+.embla__main {
   position: relative;
   background-color: #f7f7f7;
   padding: 20px;
@@ -8,21 +8,21 @@
   margin-right: auto;
 }
 
-.embla__viewport {
+.embla__viewport__main {
   overflow: hidden;
   width: 100%;
 }
 
-.embla__viewport.is-draggable {
+.embla__viewport.is-draggable__main {
   cursor: move;
   cursor: grab;
 }
 
-.embla__viewport.is-dragging {
+.embla__viewport.is-dragging__main {
   cursor: grabbing;
 }
 
-.embla__container {
+.embla__container__main {
   display: flex;
   user-select: none;
   -webkit-touch-callout: none;
@@ -31,20 +31,20 @@
   margin-left: -10px;
 }
 
-.embla__slide {
+.embla__slide__main {
   position: relative;
   min-width: 100%;
   padding-left: 10px;
 }
 
-.embla__slide__inner {
+.embla__slide__inner__main {
   position: relative;
   overflow: hidden;
   /* height: 190px; */
   height: 700px;
 }
 
-.embla__slide__img {
+.embla__slide__img__main {
   position: absolute;
   display: block;
   top: 50%;
@@ -57,7 +57,7 @@
   object-fit: cover;
 }
 
-.embla__button {
+.embla__button__main {
   outline: 0;
   cursor: pointer;
   background-color: transparent;
@@ -75,20 +75,20 @@
   padding: 0;
 }
 
-.embla__button:disabled {
+.embla__button__main:disabled {
   cursor: default;
   opacity: 0.3;
 }
 
-.embla__button__svg {
+.embla__button__main__svg {
   width: 100%;
   height: 100%;
 }
 
-.embla__button--prev {
+.embla__button__main--prev {
   left: 27px;
 }
 
-.embla__button--next {
+.embla__button__main--next {
   right: 27px;
 }
