--- a/components/CarouselSub/css/emblaSub.css
+++ b/components/CarouselSub/css/emblaSub.css
@@ -2,7 +2,8 @@
   position: relative;
   background-color: #f7f7f7;
   padding: 20px;
-  max-width: 670px;
+  /* max-width: 670px; */
+  max-width: 1900px;
   margin-left: auto;
   margin-right: auto;
 }
